# crud-fastapi

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
application/: __init__.py
application/api/: routers.py  schemas.py
application/db/: engine.py  fakedb.py  session.py
application/db/models/: __init__.py  models.py
application/db/repository/: __init__.py  repository.py
application/login/: responses.py  routers.py  schemas.py
application/middleware/: jwt.py
application/re/: background.py  routers.py
application/tests/: test_repository.py
migrations/: env.py
migrations/versions/: 0638fe0699bc_initial_migration.py  7d5decfb4997_add_psswd_column_to_user.py  89cb4ef18210_add_psswd_column_to_user.py
settings/: __init__.py
short/application/: ctrl.py  dto.py  responses.py  storage.py
