[tool.poetry]
name = "crud-fastapi"
version = "0.1.0"
description = "a crud project"
authors = ["Carlos José C Jr"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
alembic = "^1.13.1"
pytest = "^8.2.2"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E501", "I"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

